[tool.poetry]
name = "everything-site"
version = "0.1.0"
description = ""
authors = ["Sam Kenney <sam.kenney@louder.com.au>"]
readme = "README.md"
packages = [{include = "everything_site"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^2.2.3"
httpx = "^0.24.0"


[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
nox = "^2023.4.22"
black = "^23.3.0"
flake8-docstrings = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88


[tool.pytest.coverage.run]
omit = ["*tests*", "*__pycache__*", "*venv*", "*nox*", "*tox*", "*git*"]
